# ChangeLog for www-client/chromium
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.209 2010/10/27 14:20:22 voyageur Exp $

  27 Oct 2010; Bernard Cafarelli <voyageur@gentoo.org> chromium-9999.ebuild:
  Drop icu patch, merged upstream, thanks Keith Rusler
  <xzekecomax@gmail.com> in bug #342877

*chromium-8.0.552.18 (27 Oct 2010)

  27 Oct 2010; Bernard Cafarelli <voyageur@gentoo.org>
  -chromium-8.0.552.0.ebuild, +chromium-8.0.552.18.ebuild:
  Version bump for dev channel release.

*chromium-8.0.552.11 (22 Oct 2010)

  22 Oct 2010; Bernard Cafarelli <voyageur@gentoo.org>
  +chromium-8.0.552.11.ebuild:
  Version bump for dev channel release.

  20 Oct 2010; Christian Faulhammer <fauli@gentoo.org>
  chromium-7.0.517.41.ebuild:
  stable x86, security bug 341797

  20 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
  chromium-7.0.517.41.ebuild:
  Stable on amd64 wrt bug #341797

*chromium-7.0.517.41-r1 (19 Oct 2010)

  19 Oct 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  chromium-7.0.517.41.ebuild, +chromium-7.0.517.41-r1.ebuild:
  Prepare for stabilization. 7.0.517.41 has been promoted to the stable
  channel.

  15 Oct 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  chromium-8.0.552.0.ebuild, chromium-9999.ebuild:
  Make sure the build system uses the right toolchain binaries, bug #340795
  by Nikoli <nikoli@lavabit.com>

*chromium-7.0.517.41 (14 Oct 2010)

  14 Oct 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  -chromium-7.0.517.24.ebuild, +chromium-7.0.517.41.ebuild:
  Version bump for beta channel release.

*chromium-8.0.552.0 (13 Oct 2010)

  13 Oct 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  +files/chromium-system-icu-r1.patch, -chromium-7.0.544.0-r1.ebuild,
  +chromium-8.0.552.0.ebuild, chromium-9999.ebuild:
  Version bump for dev channel release. Remove old.

*chromium-7.0.544.0-r2 (11 Oct 2010)

  11 Oct 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>