@@ -1,0 +1,88 @@
+# Copyright 2009-2010 the V8 project authors. All rights reserved.
+# Redistribution and use in source and binary forms, with or without
+# modification, are permitted provided that the following conditions are
+# met:
+#
+#     * Redistributions of source code must retain the above copyright
+#       notice, this list of conditions and the following disclaimer.
+#     * Redistributions in binary form must reproduce the above
+#       copyright notice, this list of conditions and the following
+#       disclaimer in the documentation and/or other materials provided
+#       with the distribution.
+#     * Neither the name of Google Inc. nor the names of its
+#       contributors may be used to endorse or promote products derived
+#       from this software without specific prior written permission.
+#
+# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+# A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
+# OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
+# LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
+# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
+# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+{
+  'variables': {
+    'msvs_use_common_release': 0,
+    'gcc_version%': 'unknown',
+    'v8_target_arch%': '<(target_arch)',
+    'v8_use_snapshot%': 'true',
+  },
+  'targets': [
+    {
+      'target_name': 'v8',
+      'type': 'settings',
+      'link_settings': {
+        'libraries': [
+          '-lv8',
+        ],
+      },
+    },
+    {
+      'target_name': 'v8_snapshot',
+      'type': 'none',
+      'dependencies': [
+        'v8'
+      ],
+    },
+    {
+      'target_name': 'v8_nosnapshot',
+      'type': 'none',
+      'dependencies': [
+        'v8'
+      ],
+    },
+    {
+      'target_name': 'v8_base',
+      'type': 'none',
+      'dependencies': [
+        'v8'
+      ],
+    },
+    {
+      'target_name': 'js2c',
+      'type': 'none',
+      'dependencies': [
+        'v8'
+      ],
+    },
+    {
+      'target_name': 'mksnapshot',
+      'type': 'none',
+      'dependencies': [
+        'v8'
+      ],
+    },
+    {
+      'target_name': 'v8_shell',
+      'type': 'none',
+      'dependencies': [
+        'v8'
+      ],
+    },
+  ],
+}
